Use more reliable name of visual studio package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required ( VERSION 3.0 )
 if (NOT ("${CMAKE_GENERATOR}" MATCHES "MinGW Makefiles"))
 	if (NOT ("${CMAKE_GENERATOR}" MATCHES "Unix Makefiles"))
 		set (CMAKE_GENERATOR_PLATFORM "x64")
-		set ( BUILD_SYSTEM "VSx64" )
+		set ( BUILD_SYSTEM "vc16-64-bit" )
 	else()
 		set ( BUILD_SYSTEM "ubuntu" )
 	endif()
