Critical fix - Build for visual studio
Debug libraries weren't included in the installation

--- a/Libraries/CMakeLists.txt
+++ b/Libraries/CMakeLists.txt
@@ -8,7 +8,7 @@ if (NOT CMAKE_DEBUG_POSTFIX)
 	set(CMAKE_DEBUG_POSTFIX "-d")
 endif()
 
-if ("${BUILD_SYSTEM}" MATCHES "VSx64")
+if ("${BUILD_SYSTEM}" MATCHES "vc16-64-bit")
 	set ( MANDATORY_FOR_VISUAL_STUDIO TRUE )
 else()
 	set ( MANDATORY_FOR_VISUAL_STUDIO FALSE )
