--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Setup cmake
-      uses: jwlawson/actions-setup-cmake@1.13
+      uses: jwlawson/actions-setup-cmake@v1.13
       with:
         cmake-version: '3.23.2'
     
