--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-2022 ]
+        os: [ windows-2022 ]
         
     runs-on: ${{matrix.os}}
     
