--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -33,7 +33,11 @@ jobs:
         cd "${{env.BUILD_DIR}}"
         cmake ..
     
-    - name: Build
+    - name: Build debug
+      working-directory: ${{env.BUILD_DIR}}
+      run: cmake --build . --config Debug
+      
+    - name: Build release
       working-directory: ${{env.BUILD_DIR}}
       run: cmake --build . --config Release
     
