Debug files for MSVC are bundled with release

--- a/Libraries/LevelD/CMakeLists.txt
+++ b/Libraries/LevelD/CMakeLists.txt
@@ -55,7 +55,8 @@ install(
 if (${MANDATORY_FOR_VISUAL_STUDIO})
 	install(
 		FILES
-			${CMAKE_CURRENT_BINARY_DIR}/Debug/${PROJECT_NAME}-d.lib
+			"${CMAKE_CURRENT_BINARY_DIR}/Debug/${PROJECT_NAME}-d.lib"
+			"${CMAKE_CURRENT_BINARY_DIR}/Debug/${PROJECT_NAME}-d.pdb"
 		DESTINATION
 			lib
 	)
